--- a/Registar/MvcFirst/MvcFirst/MvcFirst.csproj
+++ b/Registar/MvcFirst/MvcFirst/MvcFirst.csproj
@@ -119,7 +119,7 @@
     <Content Include="Icon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\JavaScriptLabExample1.js" />
+    <Content Include="Scripts\GetBikesFromDatabaseAjaxJson.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\npm.js" />
@@ -142,6 +142,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Home\AddBike.cshtml" />
+    <Content Include="Views\Home\GetBikes.cshtml" />
+    <Content Include="Views\Home\GetBikesJSON.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
